--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "styled-components": "^5.3.10",
     "web-vitals": "^2.1.4"
   },
+  "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
